--- a/src/components/base.less
+++ b/src/components/base.less
@@ -8,12 +8,6 @@
 
 @width-container-max: @width-md;
 
-.media-screen-sm(@rules) {
-    @media screen and (max-width: @width-sm) {
-        @rules();
-    }
-}
-
 @font-size: 16px;
 @line-height: 1.4;
 
